@@ -25,172 +25,173 @@ import de.erdesignerng.dialect.DataType;
  * @author $Author: mirkosertic $
  * @version $Date: 2009-03-13 15:40:33 $
  */
-public class Domain extends OwnedModelItem<Model> implements
-        ModelItemCloneable<Domain>, DataType {
+public class Domain extends OwnedModelItem<Model> implements ModelItemCloneable<Domain>, DataType {
 
-    private Integer size;
+	private Integer size;
 
-    private Integer fraction;
+	private Integer fraction;
 
-    private int scale = 10;
+	private int scale = 10;
 
-    private DataType concreteType;
+	private DataType concreteType;
 
-    private boolean nullable = true;
+	private boolean nullable = true;
 
-    public Domain() {
-    }
+	public Domain() {
+	}
 
-    /**
-     * @return the size
-     */
-    public Integer getSize() {
-        return size;
-    }
+	/**
+	* @return the size
+	*/
+	public Integer getSize() {
+		return size;
+	}
 
-    /**
-     * @param size the size to set
-     */
-    public void setSize(Integer size) {
-        this.size = size;
-    }
+	/**
+	* @param size the size to set
+	*/
+	public void setSize(Integer size) {
+		this.size = size;
+	}
 
-    /**
-     * @return the fraction
-     */
-    public Integer getFraction() {
-        return fraction;
-    }
+	/**
+	* @return the fraction
+	*/
+	public Integer getFraction() {
+		return fraction;
+	}
 
-    /**
-     * @param fraction the fraction to set
-     */
-    public void setFraction(Integer fraction) {
-        this.fraction = fraction;
-    }
+	/**
+	* @param fraction the fraction to set
+	*/
+	public void setFraction(Integer fraction) {
+		this.fraction = fraction;
+	}
 
-    /**
-     * @return the scale
-     */
-    public int getScale() {
-        return scale;
-    }
+	/**
+	* @return the scale
+	*/
+	public int getScale() {
+		return scale;
+	}
 
-    /**
-     * @param scale the scale to set
-     */
-    public void setScale(int scale) {
-        this.scale = scale;
-    }
+	/**
+	* @param scale the scale to set
+	*/
+	public void setScale(int scale) {
+		this.scale = scale;
+	}
 
-    /**
-     * @return the concreteType
-     */
-    public DataType getConcreteType() {
-        return concreteType;
-    }
+	/**
+	* @return the concreteType
+	*/
+	public DataType getConcreteType() {
+		return concreteType;
+	}
 
-    /**
-     * @param concreteType the concreteType to set
-     */
-    public void setConcreteType(DataType concreteType) {
-        this.concreteType = concreteType;
-    }
+	/**
+	* @param concreteType the concreteType to set
+	*/
+	public void setConcreteType(DataType concreteType) {
+		this.concreteType = concreteType;
+	}
 
-    @Override
-    public boolean supportsFraction() {
-        return concreteType.supportsFraction();
-    }
+	@Override
+	public boolean supportsFraction() {
+		return concreteType.supportsFraction();
+	}
 
-    @Override
-    public boolean supportsScale() {
-        return concreteType.supportsScale();
-    }
+	@Override
+	public boolean supportsScale() {
+		return concreteType.supportsScale();
+	}
 
-    @Override
-    public boolean supportsSize() {
-        return concreteType.supportsSize();
-    }
+	@Override
+	public boolean supportsSize() {
+		return concreteType.supportsSize();
+	}
 
-    @Override
-    public Domain clone() {
-        Domain theDomain = new Domain();
-        theDomain.setSystemId(getSystemId());
-        theDomain.setName(getName());
-        theDomain.setConcreteType(concreteType);
-        theDomain.setSize(size);
-        theDomain.setFraction(fraction);
-        theDomain.setScale(scale);
-        theDomain.setNullable(nullable);
-        return theDomain;
-    }
+	@Override
+	public Domain clone() {
+		Domain theDomain = new Domain();
+		theDomain.setSystemId(getSystemId());
+		theDomain.setName(getName());
+		theDomain.setConcreteType(concreteType);
+		theDomain.setSize(size);
+		theDomain.setFraction(fraction);
+		theDomain.setScale(scale);
+		theDomain.setNullable(nullable);
+		theDomain.setComment(getComment());
+		return theDomain;
+	}
 
-    /**
-     * Restore the data from a clone.
-     *
-     * @param aValue the clone
-     */
-    @Override
-    public void restoreFrom(Domain aValue) {
-        setName(aValue.getName());
-        setSystemId(aValue.getSystemId());
-        setConcreteType(aValue.getConcreteType());
-        setSize(aValue.getSize());
-        setFraction(aValue.getFraction());
-        setScale(aValue.getScale());
-        setNullable(aValue.isNullable());
-    }
+	/**
+	* Restore the data from a clone.
+	*
+	* @param aValue the clone
+	*/
+	@Override
+	public void restoreFrom(Domain aValue) {
+		setName(aValue.getName());
+		setSystemId(aValue.getSystemId());
+		setConcreteType(aValue.getConcreteType());
+		setSize(aValue.getSize());
+		setFraction(aValue.getFraction());
+		setScale(aValue.getScale());
+		setNullable(aValue.isNullable());
+		setComment(aValue.getComment());
+	}
 
-    @Override
-    public String createTypeDefinitionFor(Attribute aAttribute) {
-        Attribute theClone = aAttribute.clone();
-        theClone.setSize(size);
-        theClone.setFraction(fraction);
-        theClone.setScale(scale);
-        theClone.setNullable(nullable);
-        return concreteType.createTypeDefinitionFor(theClone);
-    }
+	@Override
+	public String createTypeDefinitionFor(Attribute aAttribute) {
+		Attribute theClone = aAttribute.clone();
+		theClone.setSize(size);
+		theClone.setFraction(fraction);
+		theClone.setScale(scale);
+		theClone.setNullable(nullable);
+		return concreteType.createTypeDefinitionFor(theClone);
+	}
 
-    @Override
-    public boolean isDomain() {
-        return true;
-    }
+	@Override
+	public boolean isDomain() {
+		return true;
+	}
 
-    @Override
-    public boolean isJDBCStringType() {
-        return concreteType.isJDBCStringType();
-    }
+	@Override
+	public boolean isJDBCStringType() {
+		return concreteType.isJDBCStringType();
+	}
 
-    @Override
-    public int[] getJDBCType() {
-        return concreteType.getJDBCType();
-    }
+	@Override
+	public int[] getJDBCType() {
+		return concreteType.getJDBCType();
+	}
 
-    @Override
-    public boolean isIdentity() {
-        return concreteType.isIdentity();
-    }
+	@Override
+	public boolean isIdentity() {
+		return concreteType.isIdentity();
+	}
 
-    @Override
-    public String getDefinition() {
-        return concreteType.getDefinition();
-    }
+	@Override
+	public String getDefinition() {
+		return concreteType.getDefinition();
+	}
 
-    @Override
-    public boolean isSpatial() {
-        return false;
-    }
+	@Override
+	public boolean isSpatial() {
+		return false;
+	}
 
-    @Override
-    public boolean supportsExtra() {
-        return concreteType.supportsExtra();
-    }
+	@Override
+	public boolean supportsExtra() {
+		return concreteType.supportsExtra();
+	}
 
-    public boolean isNullable() {
-        return nullable;
-    }
+	public boolean isNullable() {
+		return nullable;
+	}
 
-    public void setNullable(boolean nullable) {
-        this.nullable = nullable;
-    }
+	public void setNullable(boolean nullable) {
+		this.nullable = nullable;
+	}
 }
