@@ -279,6 +279,7 @@ Release 3.0.0
 * Bug Fixing 3413026 [ERDesignerNG] the new 3D view does not support loops
 * Bug Fixing 3416991 [ERDesignerNG] behaviour (de)selecting objects in diagram
 * Bug Fixing 3414627 [ERDesignerNG] SubjectArea issues
+* Bug Fixing 3420950 [ERDesignerNG] DomainEditor: comments not stored
 * Working on support for Spatial Datatypes & Fulltext indexes
 * Added support for model validation & quick fixes
 * Added support for anaglyphic 3d mode
